testData/diagnostics/div64_by_minus_one_vm.diag.txt
ERROR: too many digits for an Hex number
testData/diagnostics/div64_by_minus_one_vm.nut:1:11

local x = -0x7FFFFFFFFFFFFFFF - 1
           ^-----------------
local y = @(a) -a


